@@ -14,3 +14,17 @@ dependencies {
     testImplementation(project(":pie.runtime"))
     testCompileOnly("org.checkerframework:checker-qual-android")
 }
+
+tasks.test {
+    jvmArgs(listOf(
+        // Needed for Java 17
+        "--add-opens", "java.base/java.io=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens", "java.base/java.math=ALL-UNNAMED",
+        "--add-opens", "java.base/java.net=ALL-UNNAMED",
+        "--add-opens", "java.base/java.text=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
+    ))
+}
